--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "ssh2": "^1.16.0",
+    "ssh2-sftp-client": "^11.0.0"
   }
 }
