--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI = "mongodb+srv://otiedwin40:HillaryOdezy123@fsw.vi5qo1n.mongodb.net/"
+HOST = '135.148.24.72'
+USER = 'us_s_vpn_admin'
+PASS = 'uSad12#_$'
